Demonstration/session-management-module/dev-environment/k8s-env-creator/master-node/db-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: session-management-db-service
  namespace: dev
  labels:
    app: session-management
spec:
  ports:
    - port: 3306
      targetPort: 3306
  selector:
    app: session-management
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: session-management-db-deployment
  namespace: dev
  labels:
    app: session-management
spec:
  replicas: 1
  selector:
    matchLabels:
      app: session-management
  template:
    metadata:
      labels:
        app: session-management
    spec:
      containers:
        - name: session-management
          image: mysql:latest
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: session-management-persistent-storage
              mountPath: "/docker-entrypoint-initdb.d"
            - name: session-management-db-persistent-storage
              mountPath: "/var/lib/mysql"
      volumes:
        - name: session-management-persistent-storage
          persistentVolumeClaim:
            claimName: session-management-pv-claim
        - name: session-management-db-persistent-storage
          persistentVolumeClaim:
            claimName: session-management-db-pv-claim
