Demonstration/session-management-module/dev-environment/k8s-env-creator/master-node/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8s-ingress
  namespace: dev
spec:
  tls:
   - hosts:
      - token.noteziee.cloud
     secretName: token.noteziee.cloud
  ingressClassName: kong
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: session-management-service
            port:
              number: 8008
